oss-knowledge-gitops/backend/embedding-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: embedding-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: oss-knowledge-embedding.4.230.158.187.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: embedding-server
            port:
              number: 8000
